Fix to the dropdown on settings. Z-Index issue.

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -131,6 +131,10 @@ nav.second-bar {
     align-items: center;
 }
 
+div.sticky-container {
+    z-index: 1;
+}
+
 /*********************
 POSTS & CONTENT STYLES
 *********************/
